src/objects/guest_hotel_activity_vedw__x.object
<CustomObject>
    <description>guest_hotel_activity_vedw</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$gst_hotel_activity_vedw</externalName>
    <fields>
        <fullName>c_activity_status__c</fullName>
        <label>Activity Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_address_1__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_address_2__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cancel_agent_id__c</fullName>
        <label>Cancel Agent Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cancel_id__c</fullName>
        <label>Cancel Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_checkin_agent_id__c</fullName>
        <label>Checkin Agent Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_checkin_location__c</fullName>
        <label>Checkin Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_checkout_agent_id__c</fullName>
        <label>Checkout Agent Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_checkout_location__c</fullName>
        <label>Checkout Location</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_city__c</fullName>
        <description>c_city</description>
        <externalDeveloperName>c_city</externalDeveloperName>
        <label>c_city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_confirm_email__c</fullName>
        <description>c_confirm_email</description>
        <externalDeveloperName>c_confirm_email</externalDeveloperName>
        <label>c_confirm_email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_confirm_id__c</fullName>
        <description>c_confirm_id</description>
        <externalDeveloperName>c_confirm_id</externalDeveloperName>
        <label>c_confirm_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_credit_card_auth_nbr__c</fullName>
        <description>c_credit_card_auth_nbr</description>
        <externalDeveloperName>c_credit_card_auth_nbr</externalDeveloperName>
        <label>c_credit_card_auth_nbr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_credit_card_exp_dt__c</fullName>
        <description>c_credit_card_exp_dt</description>
        <externalDeveloperName>c_credit_card_exp_dt</externalDeveloperName>
        <label>c_credit_card_exp_dt</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_credit_card_nbr__c</fullName>
        <description>c_credit_card_nbr</description>
        <externalDeveloperName>c_credit_card_nbr</externalDeveloperName>
        <label>c_credit_card_nbr</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_email_contact_flag__c</fullName>
        <description>c_email_contact_flag</description>
        <externalDeveloperName>c_email_contact_flag</externalDeveloperName>
        <label>c_email_contact_flag</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_first_name__c</fullName>
        <description>c_first_name</description>
        <externalDeveloperName>c_first_name</externalDeveloperName>
        <label>c_first_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_group_cd__c</fullName>
        <description>c_group_cd</description>
        <externalDeveloperName>c_group_cd</externalDeveloperName>
        <label>c_group_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_group_type__c</fullName>
        <description>c_group_type</description>
        <externalDeveloperName>c_group_type</externalDeveloperName>
        <label>c_group_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_last_name__c</fullName>
        <description>c_last_name</description>
        <externalDeveloperName>c_last_name</externalDeveloperName>
        <label>c_last_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_occupant_type__c</fullName>
        <description>c_occupant_type</description>
        <externalDeveloperName>c_occupant_type</externalDeveloperName>
        <label>c_occupant_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_offer_id__c</fullName>
        <description>c_offer_id</description>
        <externalDeveloperName>c_offer_id</externalDeveloperName>
        <label>c_offer_id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_orig_prop_cd__c</fullName>
        <description>c_orig_prop_cd</description>
        <externalDeveloperName>c_orig_prop_cd</externalDeveloperName>
        <label>c_orig_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_original_rm_type__c</fullName>
        <description>c_original_rm_type</description>
        <externalDeveloperName>c_original_rm_type</externalDeveloperName>
        <label>c_original_rm_type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_original_wing_cd__c</fullName>
        <description>c_original_wing_cd</description>
        <externalDeveloperName>c_original_wing_cd</externalDeveloperName>
        <label>c_original_wing_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pri_cas_guest_id__c</fullName>
        <description>c_pri_cas_guest_id</description>
        <externalDeveloperName>c_pri_cas_guest_id</externalDeveloperName>
        <label>c_pri_cas_guest_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>c_prop_cd_fk</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guest Hotel Activity Vedvs</relationshipLabel>
        <relationshipName>Guest_Hotel_Activity_Vedvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rate_plan__c</fullName>
        <description>c_rate_plan</description>
        <externalDeveloperName>c_rate_plan</externalDeveloperName>
        <label>c_rate_plan</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_reservation_agent_id__c</fullName>
        <description>c_reservation_agent_id</description>
        <externalDeveloperName>c_reservation_agent_id</externalDeveloperName>
        <label>c_reservation_agent_id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rm_nbr__c</fullName>
        <description>c_rm_nbr</description>
        <externalDeveloperName>c_rm_nbr</externalDeveloperName>
        <label>c_rm_nbr</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rm_type__c</fullName>
        <description>c_rm_type</description>
        <externalDeveloperName>c_rm_type</externalDeveloperName>
        <label>c_rm_type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_sec_cas_guest_id__c</fullName>
        <description>c_sec_cas_guest_id</description>
        <externalDeveloperName>c_sec_cas_guest_id</externalDeveloperName>
        <label>c_sec_cas_guest_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_settle_method__c</fullName>
        <description>c_settle_method</description>
        <externalDeveloperName>c_settle_method</externalDeveloperName>
        <label>c_settle_method</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_share_id__c</fullName>
        <description>c_share_id</description>
        <externalDeveloperName>c_share_id</externalDeveloperName>
        <label>c_share_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cd__c</fullName>
        <description>c_source_cd</description>
        <externalDeveloperName>c_source_cd</externalDeveloperName>
        <label>c_source_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_state_cd__c</fullName>
        <description>c_state_cd</description>
        <externalDeveloperName>c_state_cd</externalDeveloperName>
        <label>c_state_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tracking__c</fullName>
        <description>c_tracking</description>
        <externalDeveloperName>c_tracking</externalDeveloperName>
        <label>c_tracking</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_transaction_agent_id__c</fullName>
        <description>c_transaction_agent_id</description>
        <externalDeveloperName>c_transaction_agent_id</externalDeveloperName>
        <label>c_transaction_agent_id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_wing_cd__c</fullName>
        <description>c_wing_cd</description>
        <externalDeveloperName>c_wing_cd</externalDeveloperName>
        <label>c_wing_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_zip_cd__c</fullName>
        <description>c_zip_cd</description>
        <externalDeveloperName>c_zip_cd</externalDeveloperName>
        <label>c_zip_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>contact_fk</externalDeveloperName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guest Hotel Activity Vedvs</relationshipLabel>
        <relationshipName>guest_hotel_activity_vedw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>customer_control_segments_adj_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>customer_control_segments_adj_fk</description>
        <externalDeveloperName>customer_control_segments_adj_fk</externalDeveloperName>
        <label>customer_control_segments_adj_fk</label>
        <referenceTo>CustomerControlSegments__c</referenceTo>
        <relationshipLabel>Guest Hotel Activity Vedvs</relationshipLabel>
        <relationshipName>Guest_Hotel_Activity_Vedvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>customer_control_segments_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>customer_control_segments_fk</description>
        <externalDeveloperName>customer_control_segments_fk</externalDeveloperName>
        <label>customer_control_segments_fk</label>
        <referenceTo>CustomerControlSegments__c</referenceTo>
        <relationshipLabel>Guest Hotel Activity Vedvs (customer_control_segments_fk)</relationshipLabel>
        <relationshipName>Guest_Hotel_Activity_Vedvs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>d_arrival_dt__c</fullName>
        <description>d_arrival_dt</description>
        <externalDeveloperName>d_arrival_dt</externalDeveloperName>
        <label>d_arrival_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_cancel_dt__c</fullName>
        <description>d_cancel_dt</description>
        <externalDeveloperName>d_cancel_dt</externalDeveloperName>
        <label>d_cancel_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_cancel_rpt_period__c</fullName>
        <description>d_cancel_rpt_period</description>
        <externalDeveloperName>d_cancel_rpt_period</externalDeveloperName>
        <label>d_cancel_rpt_period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_checkin_dt__c</fullName>
        <description>d_checkin_dt</description>
        <externalDeveloperName>d_checkin_dt</externalDeveloperName>
        <label>d_checkin_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_checkin_rpt_period__c</fullName>
        <description>d_checkin_rpt_period</description>
        <externalDeveloperName>d_checkin_rpt_period</externalDeveloperName>
        <label>d_checkin_rpt_period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_checkout_dt__c</fullName>
        <description>d_checkout_dt</description>
        <externalDeveloperName>d_checkout_dt</externalDeveloperName>
        <label>d_checkout_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_checkout_rpt_period__c</fullName>
        <description>d_checkout_rpt_period</description>
        <externalDeveloperName>d_checkout_rpt_period</externalDeveloperName>
        <label>d_checkout_rpt_period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_departure_dt__c</fullName>
        <description>d_departure_dt</description>
        <externalDeveloperName>d_departure_dt</externalDeveloperName>
        <label>d_departure_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_dob__c</fullName>
        <description>d_dob</description>
        <externalDeveloperName>d_dob</externalDeveloperName>
        <label>d_dob</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_reserve_dt__c</fullName>
        <description>d_reserve_dt</description>
        <externalDeveloperName>d_reserve_dt</externalDeveloperName>
        <label>d_reserve_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_reserve_rpt_period__c</fullName>
        <description>d_reserve_rpt_period</description>
        <externalDeveloperName>d_reserve_rpt_period</externalDeveloperName>
        <label>d_reserve_rpt_period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_transaction_dt__c</fullName>
        <description>d_transaction_dt</description>
        <externalDeveloperName>d_transaction_dt</externalDeveloperName>
        <label>d_transaction_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_comp_fb_rev__c</fullName>
        <description>f_comp_fb_rev</description>
        <externalDeveloperName>f_comp_fb_rev</externalDeveloperName>
        <label>f_comp_fb_rev</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_other_rev__c</fullName>
        <description>f_comp_other_rev</description>
        <externalDeveloperName>f_comp_other_rev</externalDeveloperName>
        <label>f_comp_other_rev</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_room_rev__c</fullName>
        <description>f_comp_room_rev</description>
        <externalDeveloperName>f_comp_room_rev</externalDeveloperName>
        <label>f_comp_room_rev</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_deposit_amt_req__c</fullName>
        <description>f_deposit_amt_req</description>
        <externalDeveloperName>f_deposit_amt_req</externalDeveloperName>
        <label>f_deposit_amt_req</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_deposit_credit_card_chg__c</fullName>
        <description>f_deposit_credit_card_chg</description>
        <externalDeveloperName>f_deposit_credit_card_chg</externalDeveloperName>
        <label>f_deposit_credit_card_chg</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_fb_rev__c</fullName>
        <description>f_fb_rev</description>
        <externalDeveloperName>f_fb_rev</externalDeveloperName>
        <label>f_fb_rev</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_rev__c</fullName>
        <description>f_other_rev</description>
        <externalDeveloperName>f_other_rev</externalDeveloperName>
        <label>f_other_rev</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_reserve_id__c</fullName>
        <description>f_reserve_id</description>
        <externalDeveloperName>f_reserve_id</externalDeveloperName>
        <label>f_reserve_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_room_rev__c</fullName>
        <description>f_room_rev</description>
        <externalDeveloperName>f_room_rev</externalDeveloperName>
        <label>f_room_rev</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_rev_reserved__c</fullName>
        <description>f_room_rev_reserved</description>
        <externalDeveloperName>f_room_rev_reserved</externalDeveloperName>
        <label>f_room_rev_reserved</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_tax_reserved__c</fullName>
        <description>f_room_tax_reserved</description>
        <externalDeveloperName>f_room_tax_reserved</externalDeveloperName>
        <label>f_room_tax_reserved</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hotel_act_status_code_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel Activity Status Code</label>
        <referenceTo>HotelActivityStatusCode__c</referenceTo>
        <relationshipLabel>Guest Hotel Activity Vedvs</relationshipLabel>
        <relationshipName>guest_hotel_activity_vedw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i_checkin_dy__c</fullName>
        <description>i_checkin_dy</description>
        <externalDeveloperName>i_checkin_dy</externalDeveloperName>
        <label>i_checkin_dy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkin_hr__c</fullName>
        <description>i_checkin_hr</description>
        <externalDeveloperName>i_checkin_hr</externalDeveloperName>
        <label>i_checkin_hr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkin_min__c</fullName>
        <description>i_checkin_min</description>
        <externalDeveloperName>i_checkin_min</externalDeveloperName>
        <label>i_checkin_min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkin_mn__c</fullName>
        <description>i_checkin_mn</description>
        <externalDeveloperName>i_checkin_mn</externalDeveloperName>
        <label>i_checkin_mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkin_sec__c</fullName>
        <description>i_checkin_sec</description>
        <externalDeveloperName>i_checkin_sec</externalDeveloperName>
        <label>i_checkin_sec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkin_yr__c</fullName>
        <description>i_checkin_yr</description>
        <externalDeveloperName>i_checkin_yr</externalDeveloperName>
        <label>i_checkin_yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkout_dy__c</fullName>
        <description>i_checkout_dy</description>
        <externalDeveloperName>i_checkout_dy</externalDeveloperName>
        <label>i_checkout_dy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkout_hr__c</fullName>
        <description>i_checkout_hr</description>
        <externalDeveloperName>i_checkout_hr</externalDeveloperName>
        <label>i_checkout_hr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkout_min__c</fullName>
        <description>i_checkout_min</description>
        <externalDeveloperName>i_checkout_min</externalDeveloperName>
        <label>i_checkout_min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkout_mn__c</fullName>
        <description>i_checkout_mn</description>
        <externalDeveloperName>i_checkout_mn</externalDeveloperName>
        <label>i_checkout_mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkout_sec__c</fullName>
        <description>i_checkout_sec</description>
        <externalDeveloperName>i_checkout_sec</externalDeveloperName>
        <label>i_checkout_sec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_checkout_yr__c</fullName>
        <description>i_checkout_yr</description>
        <externalDeveloperName>i_checkout_yr</externalDeveloperName>
        <label>i_checkout_yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cms_dmid__c</fullName>
        <description>i_cms_dmid</description>
        <externalDeveloperName>i_cms_dmid</externalDeveloperName>
        <label>i_cms_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_customer_segment__c</fullName>
        <description>i_customer_segment</description>
        <externalDeveloperName>i_customer_segment</externalDeveloperName>
        <label>i_customer_segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_customer_segment_adj__c</fullName>
        <description>i_customer_segment_adj</description>
        <externalDeveloperName>i_customer_segment_adj</externalDeveloperName>
        <label>i_customer_segment_adj</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_group_id__c</fullName>
        <description>i_group_id</description>
        <externalDeveloperName>i_group_id</externalDeveloperName>
        <label>i_group_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_occupants__c</fullName>
        <description>i_nbr_occupants</description>
        <externalDeveloperName>i_nbr_occupants</externalDeveloperName>
        <label>i_nbr_occupants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_rooms__c</fullName>
        <description>i_nbr_rooms</description>
        <externalDeveloperName>i_nbr_rooms</externalDeveloperName>
        <label>i_nbr_rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_shares__c</fullName>
        <description>i_nbr_shares</description>
        <externalDeveloperName>i_nbr_shares</externalDeveloperName>
        <label>i_nbr_shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_night__c</fullName>
        <description>i_rm_night</description>
        <externalDeveloperName>i_rm_night</externalDeveloperName>
        <label>i_rm_night</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_sec_cms_dmid__c</fullName>
        <description>i_sec_cms_dmid</description>
        <externalDeveloperName>i_sec_cms_dmid</externalDeveloperName>
        <label>i_sec_cms_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_sec_dmid__c</fullName>
        <description>i_sec_dmid</description>
        <externalDeveloperName>i_sec_dmid</externalDeveloperName>
        <label>i_sec_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_stay_id__c</fullName>
        <description>i_stay_id</description>
        <externalDeveloperName>i_stay_id</externalDeveloperName>
        <label>i_stay_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>source_code_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>source_code_fk</description>
        <externalDeveloperName>source_code_fk</externalDeveloperName>
        <label>Source code</label>
        <referenceTo>SourceCode__c</referenceTo>
        <relationshipLabel>Guest Hotel Activity Vedvs</relationshipLabel>
        <relationshipName>Guest_Hotel_Activity_Vedvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Guest Hotel Activity Vedv</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Guest Hotel Activity Vedvs</pluralLabel>
</CustomObject>